# fpbase2

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  package-lock.json  pyproject.toml  x.py
.github/: dependabot.yml
.github/workflows/: tests.yml
fpbase2/: _cli.py  _dev.py  _typed_sa.py  _vendored.py  db.py  main.py  utils.py  validators.py
fpbase2/_dev/: __init__.py  _factories.py  _import.py  commands.py
fpbase2/api/legacy/: api.py
fpbase2/api/legacy/endpoints/: proteins.py
fpbase2/core/: config.py
fpbase2/db/: __init__.py  _engine.py  _query.py
fpbase2/models/: __init__.py  _query.py  mixins.py  protein.py  reference.py  user.py
fpbase2/utils/: __init__.py  crossref.py  session.py  text.py
scripts/: migrate_fpb.py
src/_dev/: _import.py
src/fpbase2/: _cli.py  _typed_sa.py  _vendored.py  crud.py  main.py
src/fpbase2/_dev/: _factories.py  _import.py  factories.py
src/fpbase2/core/: _query.py  config.py  db.py  utils.py
src/fpbase2/models/: __init__.py  _base.py  _manager.py  mixins.py  protein.py  reference.py  user.py
src/fpbase2/tests/: conftest.py  test_protein.py
src/fpbase2/tests/utils/: protein.py  utils.py
src/fpbase2/utils/: crossref.py  session.py  text.py
tests/: conftest.py  test_protein.py
